// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountWalletCard render should correctly render component with current account 1`] = `
<div class="card app-card">
    <div class="card-header">
        <h2 class="card-header-title">Receive ETH</h2>
    </div>
    <div data-test="current-account" class="card-content">
        <div class="card-section">
            Your Active Address:
        </div>
        <div class="card-section">
            <account currency="ETH" address="0xB14Ab53E38DA1C172f877DBC6d65e4a1B0474C3c" balance="20"></account>
        </div>
        <!---->
        <div class="card-tokens">
            <!---->
            <tokens-list tokens=""></tokens-list>
        </div>
    </div>
</div>
`;

exports[`AccountWalletCard render should correctly render component with send button 1`] = `
<div class="card app-card">
    <div class="card-header">
        <h2 class="card-header-title">Receive ETH</h2>
    </div>
    <div data-test="current-account" class="card-content">
        <!---->
        <div class="card-section">
            <account currency="ETH" address="0xB14Ab53E38DA1C172f877DBC6d65e4a1B0474C3c" balance="20"></account>
        </div>
        <div class="card-section">
            <v-button type="button" name="button" data-test="send-button" v-on:click="bound emitSend">
                Send ethereum
            </v-button>
        </div>
        <div class="card-tokens">
            <!---->
            <tokens-list tokens=""></tokens-list>
        </div>
    </div>
</div>
`;

exports[`AccountWalletCard render should render initial state of the component 1`] = `
<div class="card app-card">
    <div class="card-header">
        <h2 class="card-header-title">Receive ETH</h2>
    </div>
    <div data-test="current-account" class="card-content">
        <!---->
        <div class="card-section">
            <account currency="ETH" address="0xB14Ab53E38DA1C172f877DBC6d65e4a1B0474C3c" balance="20"></account>
        </div>
        <!---->
        <div class="card-tokens">
            <!---->
            <tokens-list tokens=""></tokens-list>
        </div>
    </div>
</div>
`;
